# hexiwear-handwash

./: .gitignore  .gitmodules  .mbedignore  Hexi_OLED_SSD1351.lib  README.md  uTensor.lib
application/: .gitignore  CMakeLists.txt  Hexi_KW40Z.lib  Makefile  mbed-os.lib  mbed_app.json  oled_ssd1351.lib
application/app1/: .gitignore  CMakeLists.txt  hexiwear_FXAS21002.lib  hexiwear_FXOS8700.lib  hexiwear_kw40z.lib  oled_ssd1351.lib
application/app1/asset/original/: about.xcf  about_menu.xcf  recorder_menu.xcf  reset.xcf  settings_menu.xcf  start_btn.xcf  stats_bg_revisited.xcf  stats_menu.xcf  sucsess.xcf  wrist_ct_left.xcf  wrist_selection_bg.xcf
application/app1/src/: CMakeLists.txt  main.cpp
application/app1/src/collection/: CMakeLists.txt  collector_thread.cpp
application/app1/src/common/: CMakeLists.txt  config.cpp  config.h  data_exporter.cpp  data_exporter.h  data_recorder.cpp  data_recorder.h  global_thread_vars.h  haptic_feedback.h
application/app1/src/data/: CMakeLists.txt  raw_sensor_data.h  wrist.h
application/app1/src/prediction/: CMakeLists.txt  predictor_thread.cpp  predictor_thread.h  tflite_wrapper.h
application/app1/src/ui/: CMakeLists.txt  display_thread.cpp  display_thread.h
application/app1/src/ui/menu/: CMakeLists.txt  menu.cpp  navigator.cpp  navigator.h
application/app1/src/ui/menu/pages/: CMakeLists.txt  export_page.cpp  recorder_page.cpp  stats_page.cpp  stats_page.h  wrist_page.cpp  wrist_page.h
application/app2/: .gitignore  CMakeLists.txt
application/app2/src/: CMakeLists.txt  data_importer.cpp  data_importer.h  main.cpp  prediction_thread.cpp  prediction_thread.h
application/app2/src/collection/: collector_thread.cpp
application/app2/src/csv/: CMakeLists.txt  csv_parser.h  getline.h
application/asset/original/: arrow.xcf  export_bg.xcf  export_to_sd_menu.xcf  recorder_start.xcf  stats_bg.xcf  stop_btn.xcf  wrist_ct_right.xcf  wrist_menu.xcf
application/cmake/: add_app_subdirectory.cmake  get_all_targets.cmake
application/libs/FXOS8700/: CMakeLists.txt  FXOS8700.cpp  FXOS8700.h  LICENSE  README.md
application/libs/csv/: CMakeLists.txt  csv_parser.cpp  getline.cpp
application/libs/data/: CMakeLists.txt
application/libs/ml/: CMakeLists.txt  predictor.cpp  predictor.h  tflite_wrapper.h
application/libs/ml/libtf/: CMakeLists.txt
application/libs/ml/model/: model.h
application/libs/prediction/: CMakeLists.txt  features.cpp  features.h  label.h  predictor.cpp  raw_sensor_data.h  wrist.h
application/libs/prediction/model/: handwash_model.cc
application/libs/svm/: CMakeLists.txt  svm-metrics.c  svm.cpp  svm.h
application/libs/tensorflow/: CMakeLists.txt
application/libs/tensorflow/tensorflow/lite/micro/: debug_log.cc
application/libs/utils/: CMakeLists.txt  log.h
application/src/: CMakeLists.txt  collector_thread.cpp  display_thread.cpp  display_thread.h  display_wrapper.cpp  display_wrapper.h  log.cpp  main.cpp  menu_page.cpp  menu_page.h  raw_sensor_data.h
application/src/collection/: CMakeLists.txt  collector_thread.cpp
application/src/common/: CMakeLists.txt  config.cpp  config.h  data_exporter.cpp  data_exporter.h  data_recorder.cpp  data_recorder.h  global_thread_vars.h  haptic_feedback.cpp  log.h
application/src/data/: CMakeLists.txt  label.h  raw_sensor_data.h  wrist.h
application/src/menu/: menu.h  navigator.cpp  stats_page.h  wrist_page.cpp  wrist_page.h
application/src/oled/: README.md
application/src/prediction/: CMakeLists.txt  predictor_thread.cpp  tflite_wrapper.h
application/src/ui/: CMakeLists.txt  display_thread.cpp
application/src/ui/menu/: CMakeLists.txt  export_page.cpp  export_page.h  menu.cpp  menu.h  navigator.cpp  navigator.h  recorder_page.cpp  recorder_page.h  stats_page.cpp  wrist_page.cpp
application/src/ui/menu/pages/: CMakeLists.txt  stats_page.cpp  wrist_page.cpp
application/tensorflow/: CMakeLists.txt
application/tools/: generate_asset.py  make.py
docs/: .gitignore  Makefile  abstract.txt  presentazione.md  tesi.tex
docs/figure/: acc_gyr_plot.eps  lstm_energy_loss.eps  lstm_size_loss.eps  lstm_time_loss.eps  svm_feat_loss_memory.eps  svm_feat_loss_power.eps  svm_performance.eps  svm_window_loss_memory.eps  svm_window_loss_power.eps
docs/sorgenti/: biblio.tex  cap_1.tex  cap_2.tex  cap_3.tex  cap_4.tex  cap_5.tex  tesi.bib
src/: collector_thread.cpp  collector_thread.h  config.h  display_thread.h  display_wrapper.cpp  display_wrapper.h  global_thread_vars.h  handwash_model.cc  handwash_model.h  label.cpp  label.h  label_predictor.cpp  label_predictor.h  log.cpp  log.h  main.cpp  predictor_thread.cpp  predictor_thread.h  sample_matrix.cpp  sample_matrix.h  sensor_collector.cpp  sensor_collector.h  sensors.cpp  sensors.h  stat_display.cpp  stat_display.h  tflite_wrapper.h
tensorflow/lite/micro/: debug_log.cc
tesi/: ia_urb_thesis.sty  presentazione.md
tesi/figure/: CNN_sweep_wsize.eps  CNN_sweep_wsize.fig  ENSEMBLE_sweep_wsize.eps  ENSEMBLE_sweep_wsize.fig  LSTM_sweep_wsize.eps  LSTM_sweep_wsize.fig  LSTM_sweep_wsize_large.eps  LSTM_sweep_wsize_large.fig  SVM_sweep_wsize.eps  SVM_sweep_wsize.fig  acc.eps  acc.fig  acc_gyr_plot.fig  gadf.eps  gadf.fig  gasf.eps  gasf.fig  lstm_energy_loss.eps  lstm_energy_loss.fig  lstm_energy_loss_new.eps  lstm_energy_loss_new.fig  lstm_energy_loss_new_large.eps  lstm_energy_loss_new_large.fig  lstm_power_loss_new.eps  lstm_power_loss_new.fig  lstm_size_loss.eps  lstm_size_loss.fig  lstm_time_loss.eps  lstm_time_loss.fig  svm_energy_loss.eps  svm_energy_loss.fig  svm_energy_loss_large.eps  svm_energy_loss_large.fig  svm_feat_energy_loss.eps  svm_feat_energy_loss.fig  svm_feat_energy_loss_large.eps  svm_feat_energy_loss_large.fig  svm_feat_loss_memory.eps  svm_feat_loss_memory.fig  svm_feat_loss_power.eps  (+11 more)
tesi/sorgenti/: cap_1.tex  cap_2.tex  cap_3.tex  cap_4.tex  cap_5.tex  tesi.bib
training/: .gitignore  cnn.py  gaf.py  lstm.py  lstm_metrics.py  process.py  split_database.py  train.py
training/matlab/: metrics.m  split_data.m  subsample.m  to_categorical.m
